# seldinger-lumen

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  conftest.py  kodus-config.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  gpu-benchmark.yml  robin.yml  sbom.yml  secret-scan.yml
.opencode/goals/: state.json  state.json.ledger.jsonl
agentops/reports/: engineering-task-138-20260705T185110Z.json  review-diff-task137.diff  review-request-task131-post-robin.md  review-request-task131.md  review-request-task132.md  review-request-task137.md  review-request-task138.md
benchmarks/: __init__.py  bakeoff.py  gpu_session.py  leaderboard.py  throughput.py  train_nav.py  warp_gpu_check.py
benchmarks/external_comparison/: Dockerfile.steve-cpu  README.md  RUN_LOG.md  __init__.py  common_bench.py  metric_contract.json  steve_pilot.py  summarize_results.py  train_sb3.py
benchmarks/external_comparison/results/: cathsim-bca-ppo-short-50k.csv  cathsim-bca-ppo-short-50k.json  cathsim-bca-ppo-smoke-64.csv  cathsim-bca-ppo-smoke-64.json  cathsim-pilot-10.csv  cathsim-pilot-10.json  cathsim-pilot-30.csv  cathsim-pilot-30.json  cathsim-smoke-reuse.csv  cathsim-smoke-reuse.json  cathsim-smoke.csv  cathsim-smoke.json  lumen-nav-tube-ppo-smoke-64.csv  lumen-nav-tube-ppo-smoke-64.json  lumen-pilot-30.csv  lumen-pilot-30.json  lumen-smoke.csv  lumen-smoke.json  lumen-tree-ppo-short-50k.csv  lumen-tree-ppo-short-50k.json  pilot-summary-lumen-cathsim-steve.csv  pilot-summary-lumen-cathsim.csv  ppo-short-50k-lumen-cathsim-summary.csv  steve-pilot-basic-arch-30.csv  steve-pilot-basic-arch-30.json  steve-smoke-local.json  steve-smoke-venv.json
docs/: EPISODE_SCHEMA.md  SOLVER_SUPPORT.md  _config.yml  comparison.md  index.md
docs/assets/launch/: social-media-proposals.md
examples/: benchmark_throughput.py  calibrate_from_episode.py  calibrate_wall_and_friction.py  capture_episode.py  coaxial_telescope.py  estimate_stiffness.py  load_fluoro_index.py  make_demo_assets.py  register_pose.py  render_fluoro.py  render_luminal.py  replay_corpus.py  run_benchmark.py  stochastic_contact_gradient.py  submit_policy.py  train_fluoro_nav.py
launch/preprint/: lumen_preprint.tex
launch/preprint/benchmark_run/: forward-baseline.json
launch/social/: social-media-proposals.md
launch/video/lumen-launch-video/: design.md  index.html  meta.json  package.json
launch/video/lumen-launch-video/.hyperframes/: expanded-prompt.md
lumen/: __init__.py  bench.py  cli.py  hardware.py  viz.py  workflows.py
lumen/accurate/: __init__.py  diff.py  ipc.py  stochastic.py
lumen/assets/: __init__.py  imaging.py  procedural.py  schema.py
lumen/core/: __init__.py  frame.py  lumen_field.py  tree.py
lumen/data/: __init__.py  bundle.py  calibrate.py  capture.py  card.py  index.py  materialize.py  metrics.py  replay.py  schema.py  split.py
lumen/envs/: __init__.py  _actions.py  nav_gym.py  registration.py  tree_nav.py
lumen/newton/: __init__.py  aneurysm.py  clot.py  coupling.py  crossval.py  devices.py  flow.py  forces.py  hgo_wall.py  sim.py  throughput.py  tube_barrier_kernel.py  tube_contact.py  tube_vbd.py  vbd_fork.py
lumen/physics/: __init__.py  backend.py  contact.py  flow.py  imaging.py  occlusion.py  rod.py  solver.py  sysid.py  wall.py  warp_contact.py
lumen/profiles/: __init__.py
lumen/profiles/endovascular/: __init__.py
lumen/rl/: __init__.py  cem.py  fluoro_nav.py
lumen/sensors/: __init__.py  _optim.py  carm.py  device_as_sensor.py  drr.py  fluoro.py  luminal.py  perception.py  preview.py  projective.py  realism.py  registration.py  volume.py
tests/: test_accurate_tier.py  test_actions.py  test_benchmark.py  test_calibrate.py  test_capture.py  test_capture_config.py  test_case_bundle.py  test_cli.py  test_clinical_metrics.py  test_coaxial_telescope.py  test_diff_calibration.py  test_docs_site.py  test_episode_schema.py  test_frame.py  test_friction_calibration.py  test_gpu_benchmark_summary.py  test_gpu_workflow.py  test_gym_registration.py  test_hardware.py  test_imaging_import.py  test_newton_actuation.py  test_newton_anatomy.py  test_newton_aneurysm.py  test_newton_batched.py  test_newton_clot.py  test_newton_coaxial.py  test_newton_coaxial_coupling.py  test_newton_coaxial_twoway.py  test_newton_contact.py  test_newton_crossval.py  test_newton_flow.py  test_newton_flow_field.py  test_newton_friction.py  test_newton_hgo.py  test_newton_imports.py  test_newton_robustness.py  test_newton_stentriever.py  test_newton_torsion.py  test_newton_tree.py  test_observation_realism.py  (+19 more)
tools/: build_launch_assets.py  build_launch_motion_assets.py  build_real_launch_assets.py  check_docs_site.py  check_firewall.py  summarize_gpu_benchmark.py
