[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lumensim"                 # import name stays `lumen`; PyPI name avoids collisions
version = "0.0.0"
description = "Differentiable, GPU-parallel contact & coupling solver for a continuum instrument in a deformable lumen"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Colin Son" }]
keywords = ["differentiable-physics", "contact", "cosserat-rod", "endovascular",
            "surgical-simulation", "newton", "warp"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# The Layer-0 solver runs on the Newton engine (doc §3.2: build on Newton/Warp,
# do not write an engine). Newton/Warp execute on BOTH CPU and CUDA — one engine,
# no separate CPU fallback. Newton has no stable PyPI release yet and is pre-1.0;
# our SolverVBD fork tracks a pinned commit (see README / .github/workflows/ci.yml):
#   pip install "git+https://github.com/newton-physics/newton@6dfe7303d9ca50f7505cac31bee9885c813d89d7"
solver = ["warp-lang>=1.14"]      # + newton (from git, see above)
gym = ["gymnasium>=0.29"]         # M5: register the nav envs for gymnasium.make
dev = ["pytest>=7", "warp-lang>=1.14", "gymnasium>=0.29"]

[project.urls]
Homepage = "https://github.com/SeldingerMed/seldinger-lumen"
Repository = "https://github.com/SeldingerMed/seldinger-lumen"
Documentation = "https://seldingermed.github.io/seldinger-lumen/"
Issues = "https://github.com/SeldingerMed/seldinger-lumen/issues"

[tool.setuptools.packages.find]
include = ["lumen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# High-signal checks only: pyflakes (unused imports, undefined names). Style and
# import-ordering are intentionally not enforced so CI stays about correctness.
select = ["F"]

