[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seldinger-lumen"          # import name stays `lumen`; distribution matches the repo
version = "0.0.0"
description = "Procedural endovascular simulation, CV labels, and RL benchmarks for Lumen"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Colin Son" }]
keywords = ["differentiable-physics", "contact", "cosserat-rod", "endovascular",
            "surgical-simulation", "newton", "warp"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# The Layer-0 solver runs on the Newton engine (doc §3.2: build on Newton/Warp,
# do not write an engine). Newton has no stable PyPI release yet and is pre-1.0,
# so install the exact commit our SolverVBD fork is validated against.
solver = [
  "warp-lang==1.15.0",
  "newton @ git+https://github.com/newton-physics/newton@6dfe7303d9ca50f7505cac31bee9885c813d89d7",
]
gym = ["gymnasium>=0.29"]         # M5: register the nav envs for gymnasium.make
imaging = ["SimpleITK>=2.3"]      # optional DICOM series loading; core import path is NumPy/.npz
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "gymnasium>=0.29",
  "warp-lang==1.15.0",
  "newton @ git+https://github.com/newton-physics/newton@6dfe7303d9ca50f7505cac31bee9885c813d89d7",
]

[project.urls]
Homepage = "https://github.com/SeldingerMed/seldinger-lumen"
Repository = "https://github.com/SeldingerMed/seldinger-lumen"
Documentation = "https://seldingermed.github.io/seldinger-lumen/"
Issues = "https://github.com/SeldingerMed/seldinger-lumen/issues"

[project.scripts]
lumen = "lumen.cli:main"
lumen-hardware = "lumen.cli:hardware_main"
lumen-doctor = "lumen.cli:doctor_main"
lumen-benchmark = "lumen.cli:benchmark_main"
lumen-play = "lumen.cli:play_main"
lumen-demo = "lumen.cli:demo_main"
lumen-verify-demo = "lumen.cli:verify_demo_main"
lumen-train = "lumen.cli:train_main"
lumen-render-fluoro = "lumen.cli:render_fluoro_main"
lumen-capture = "lumen.cli:capture_main"
lumen-replay = "lumen.cli:replay_main"
lumen-validate = "lumen.cli:validate_main"
lumen-index = "lumen.cli:index_main"
lumen-inspect-index = "lumen.cli:inspect_index_main"
lumen-materialize-batch = "lumen.cli:materialize_batch_main"
lumen-split-index = "lumen.cli:split_index_main"
lumen-dataset-card = "lumen.cli:dataset_card_main"
lumen-calibrate = "lumen.cli:calibrate_main"
lumen-import-mask = "lumen.cli:import_mask_main"

[tool.setuptools.packages.find]
include = ["lumen*"]

[tool.setuptools.package-data]
lumen = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# High-signal checks only: pyflakes (unused imports, undefined names). Style and
# import-ordering are intentionally not enforced so CI stays about correctness.
select = ["F"]
